--- a/index.ipynb
+++ b/index.ipynb
@@ -35,16 +35,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# State your null and alternative hypotheses\n",
+    "# H0: u <= M ; The amount of time it takes to rent a car online is not significantly longer than 60 seconds. \n",
+    "# H1: u > M ; It takes significantly longer than 60 seconds to rent a car via the website\n",
+    "# One sided probability will be used as the alternate hypothesis claims that the sample mean is signifiacntly longer than the \n",
+    "# claimed population mean of 60 seconds. alpha level = 0.05. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "0.0013498980316301035\n"
+     ]
+    }
+   ],
    "source": [
     "# Your solution here\n",
+    "import scipy as stats\n",
+    "from scipy.stats import norm\n",
+    "from math import sqrt\n",
+    "s_mean = 75\n",
+    "mu = 60\n",
+    "p_std = 30\n",
+    "n = 36\n",
+    "\n",
+    "z = (s_mean - mu)/(p_std/sqrt(n))\n",
+    "pval = 1 - norm.cdf(z)\n",
+    "print(z)\n",
+    "print(pval)\n",
+    "\n",
     "\n",
     "\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
@@ -57,7 +83,9 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "# p = 0.001 indicates that there is only a 0.1% chance that the sample is NOT different from the advertised 60 second population\n",
+    "# mean. Therefore, we can confidently say that a time of 75 seconds is significantly different from the advertsied time of \n",
+    "# 60 seconds, and that this evidence contradicts the claims made by the website. We reject the null hypothesis on this basis. \n"
    ]
   },
   {
@@ -85,23 +113,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "#H0: u = M; sample student's SAT scores are equal to the mean (i.e., not significantly different from the population mean)\n",
+    "#H1: u > M; sample mean is significantly higher than the population mean of 500\n",
+    "# alpha = 0.05, one-tailed t-test. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.03593031911292577, 1.8, 536)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Give your solution here \n",
+    "import pandas as pd\n",
+    "mu = 500\n",
+    "p_std = 100\n",
+    "sample = [434, 694, 457, 534, 720, 400, 484, 478, 610, 641, 425, 636, 454, 514, 563, 370, 499, 640, 501, 625, 612, 471, 598, 509, 531]\n",
+    "s = pd.DataFrame(sample)\n",
+    "s_mean = s.mean()\n",
+    "n = len(sample)\n",
     "\n",
-    "\n",
-    "\n",
+    "z = (int(s_mean) - mu)/(p_std/sqrt(n))\n",
+    "pval = 1 - norm.cdf(z)\n",
+    "pval, z, int(s_mean)\n",
     "# p = 0.03593031911292577, z = 1.8"
    ]
   },
@@ -111,7 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of p-value obtained\n",
+    "# p = 0.04; the null hypothesis is rejected as we can confidently say that our sample mean of 536 is significantly different from \n",
+    "# the population mean of 500. Therefore, the SAT prep program is successful in raising test scores. "
    ]
   },
   {
@@ -147,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
